--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  box-sizing: border-box;
+  font-family: "Libre+Baskerville",sans-serif;
+  cursor: default;
+}
+#root{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  min-height: 100vh;
+  margin: 0;
+}
+.name{
+  margin: 8px 0px;
+}
+.city ,.job{
+  margin: 10px ;
+}
+.city{
+  text-transform: capitalize;
+}
+.job{
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+h6{
+  margin: 10px 0px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+.card-container{
+  background-color: #36333c;
+  border-radius: 5px;
+  color: #e8dfdf;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  padding-top: 30px;
+  width: 350px;
+  max-width: 100%;
+  text-align: center;
+  position: relative;
+}
+.pro{
+  color: #ffffff;
+  padding: 5px 8px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: bold;
+  position: absolute;
+  top: 30px;
+  left: 15px;
+
+}
+.online{
+  background-color: #43cc43;
+ 
+}
+.offline{
+  background-color: #ef6363bb;
+}
+.img{
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border: 2px solid #c2ddc2;
+  padding: 3px;
+}
+.button-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 22px;
+}
+.primary{
+  background-color: #514765;
+  padding: 5px 20px;
+  color: #e8dfdf;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 2px solid #6939c9;
+  font-weight: 500;
+  cursor: pointer;
+}
+.primary.outline{
+  background-color: transparent;
+  cursor: pointer;
+}
+.skill-conatiner{
+  text-align: left;
+  margin-top: 15px;
+  padding: 5px 6px 10px 15px;
+}
+.skill-conatiner ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.skill-conatiner ul li {
+  display: inline-block;
+  border: 2px solid #514765;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin: 0px 7px 7px 0px;
+  font-size: 14px;
+  text-transform: uppercase;
 }
